--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                 <td><button id="save" type="submit">Saqlash</button></td>
             </tr>
         </table>
-        <button id="see"><a href="./karta.html">Kartalarni ko'rish</a></button>
+        <button id="see"><a href="./karta.html">Tashxislar bilan tanishish</a></button>
     </div>
 
     <script>
